--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(3003 단계별/심화/3003.cpp)
 add_executable(10988 단계별/심화/10988.cpp)
 add_executable(1157 단계별/심화/1157.cpp)
+add_executable(2941 단계별/심화/2941.cpp)
